Изменен тип коллекции, исправлены сервисы, исправленно согласование хелп и команд сервиса, команды переведены на английский