@@ -3,14 +3,14 @@ package org.example.services;
 import org.example.domain.Measurement;
 import org.example.domain.MeasurementParam;
 import org.example.domain.Protocol;
-import org.example.domain.Sample;
 import org.example.validator.ProtocolValidator;
 
 import java.time.Instant;
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class ProtocolService {
-    private final TreeMap<Long, Protocol> protocols = new TreeMap<>();
+    private final List<Protocol> protocols = new ArrayList<>();
     private final SampleService sampleService;
     private final MeasurementService measurementService;
     private long nextId = 1L;
@@ -20,12 +20,7 @@ public class ProtocolService {
         this.measurementService = measurementService;
     }
 
-    // Добавление протокола
-    public Protocol add(
-            String name,
-            Set<MeasurementParam> requiredParams,
-            String ownerUsername
-    ) {
+    public Protocol add(String name, Set<MeasurementParam> requiredParams, String ownerUsername) {
         ProtocolValidator.validateName(name);
         ProtocolValidator.validateRequiredParams(requiredParams);
         ProtocolValidator.validateOwnerUsername(ownerUsername);
@@ -39,27 +34,25 @@ public class ProtocolService {
                 Instant.now()
         );
 
-        protocols.put(protocol.getId(), protocol);
+        protocols.add(protocol);
         return protocol;
     }
 
-    // Получить протокол по ID
     public Protocol getById(long id) {
-        Protocol protocol = protocols.get(id);
-        if (protocol == null) {
-            throw new NoSuchElementException("Ошибка: протокол с id=" + id + " не найден");
-        }
-        return protocol;
+        return protocols.stream()
+                .filter(p -> p.getId() == id)
+                .findFirst()
+                .orElseThrow(() -> new NoSuchElementException("Ошибка: протокол с id=" + id + " не найден"));
     }
 
-    // Получить все протоколы
     public List<Protocol> getAll() {
-        return new ArrayList<>(protocols.values());
+        return protocols.stream()
+                .sorted(Comparator.comparing(Protocol::getId))
+                .collect(Collectors.toList());
     }
 
-    // Список протоколов с фильтрацией по владельцу
     public List<Protocol> list(boolean mineOnly, String currentUser) {
-        return protocols.values().stream()
+        return protocols.stream()
                 .filter(protocol -> {
                     if (mineOnly && currentUser != null && !currentUser.isEmpty()) {
                         return protocol.getOwnerUsername().equals(currentUser);
@@ -67,17 +60,16 @@ public class ProtocolService {
                     return true;
                 })
                 .sorted(Comparator.comparing(Protocol::getId))
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    // Список протоколов по владельцу
     public List<Protocol> getByOwner(String ownerUsername) {
-        return protocols.values().stream()
+        return protocols.stream()
                 .filter(protocol -> protocol.getOwnerUsername().equals(ownerUsername))
-                .toList();
+                .sorted(Comparator.comparing(Protocol::getId))
+                .collect(Collectors.toList());
     }
 
-    // Обновить название протокола
     public Protocol updateName(long id, String newName, String ownerUsername) {
         Protocol protocol = getById(id);
 
@@ -91,7 +83,6 @@ public class ProtocolService {
         return protocol;
     }
 
-    // Обновить список обязательных параметров
     public Protocol updateRequiredParams(long id, Set<MeasurementParam> newRequiredParams, String ownerUsername) {
         Protocol protocol = getById(id);
 
@@ -105,39 +96,31 @@ public class ProtocolService {
         return protocol;
     }
 
-    // Проверить, соответствует ли образец протоколу
     public boolean checkSampleCompliance(long sampleId, long protocolId) {
         Protocol protocol = getById(protocolId);
-        Sample sample = sampleService.getById(sampleId);
-
-        if (sample == null) {
-            throw new IllegalArgumentException("Ошибка: образец с id=" + sampleId + " не найден");
-        }
+        sampleService.getById(sampleId);
 
         List<Measurement> measurements = measurementService.listBySample(sampleId);
         Set<MeasurementParam> measuredParams = measurements.stream()
                 .map(Measurement::getParam)
-                .collect(HashSet::new, HashSet::add, HashSet::addAll);
+                .collect(Collectors.toSet());
 
         return measuredParams.containsAll(protocol.getRequiredParams());
     }
 
-    // Получить отсутствующие параметры для образца по протоколу
     public Set<MeasurementParam> getMissingParams(long sampleId, long protocolId) {
         Protocol protocol = getById(protocolId);
         List<Measurement> measurements = measurementService.listBySample(sampleId);
 
         Set<MeasurementParam> measuredParams = measurements.stream()
                 .map(Measurement::getParam)
-                .collect(HashSet::new, HashSet::add, HashSet::addAll);
+                .collect(Collectors.toSet());
 
         Set<MeasurementParam> missing = new HashSet<>(protocol.getRequiredParams());
         missing.removeAll(measuredParams);
-
         return missing;
     }
 
-    // Удалить протокол
     public boolean remove(long id, String ownerUsername) {
         Protocol protocol = getById(id);
 
@@ -145,16 +128,10 @@ public class ProtocolService {
             throw new SecurityException("Ошибка: нет прав на удаление этого протокола");
         }
 
-        return protocols.remove(id) != null;
+        return protocols.remove(protocol);
     }
 
-    // Проверка существования протокола
     public boolean exists(long id) {
-        return protocols.containsKey(id);
-    }
-
-    // Получить все протоколы как Map
-    public Map<Long, Protocol> getAllAsMap() {
-        return new TreeMap<>(protocols);
+        return protocols.stream().anyMatch(p -> p.getId() == id);
     }
 }
